--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "@debate-map/server-link",
   "description": "Tree-based mapping of beliefs, arguments, and evidence. (server link, used by clients)",
   "version": "1.0.0",
-  "main": "Dist/Link/index.js",
+  "@main": "Dist/Link/index.js",
   "type": "module",
-  "typings": "Dist/Link/index.d.ts",
+  "@typings": "Dist/Link/index.d.ts",
   "license": "MIT",
   "author": {
     "name": "Venryx",
