* MS "main" and "typings" point to the Dist folder again. (we'll have the default behavior be easiest for random js projects to import -- for ones that want the ts files directly, eg. for direct jump-to-source when using npm link, they can just import from "@debate-map/server-link/Source/Link", and future import suggestions will come from there) * Populated Source/Link/index.ts file.
Package now works as expected, when imported as-source into @debate-map/client!

--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "@debate-map/server-link",
   "description": "Tree-based mapping of beliefs, arguments, and evidence. (server link, used by clients)",
   "version": "1.0.0",
-  "@main": "Dist/Link/index.js",
+  "main": "Dist/Link/index.js",
+  "typings": "Dist/Link/index.d.ts",
   "type": "module",
-  "@typings": "Dist/Link/index.d.ts",
   "license": "MIT",
   "author": {
     "name": "Venryx",
@@ -30,6 +30,6 @@
   },
   "dependencies": {
     "js-vextensions": "^1.0.28",
-    "mobx-firelink": "^1.0.43"
+    "mobx-firelink": "^1.0.48"
   }
 }
