--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,11 +23,13 @@
 		//"strictNullChecks": true, // maybe enable later
 		//"strictFunctionTypes": true,
 		//"strictPropertyInitialization": true,
+		// fixes issue when parent-repo importing Source folder directly (without, ts may oddly complain "[some package] not under rootDir of [this package]")
+		"composite": true
 	},
 	"include": [
 		"Typings/**/*.d.ts",
 		"Source/**/*.ts",
 		"Source/**/*.tsx"
 	],
-	"compileOnSave": true
+	"compileOnSave": true,
 }
