--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,8 @@
 		"declaration": true,
 		"declarationDir": "Dist",
 
+		"lib": ["es2016", "DOM"],
+
 		//"strict": true, // enables all of the below (other than noImplicitReturns)
 		//"noImplicitAny": true,
 		//"noImplicitThis": true,
